# tree-sitter-highlight

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: backport.yml  bindgen.yml  build.yml  ci.yml  crate_versions.yml  docs.yml  nvim_ts.yml  release.yml  response.yml  reviewers_remove.yml  sanitize.yml  spam.yml  wasm_exports.yml  wasm_stdlib.yml
crates/cli/: Cargo.toml
crates/cli/src/: fuzz.rs  highlight.rs  main.rs  test.rs  test_highlight.rs  tree_sitter_cli.rs
crates/cli/src/tests/: highlight_test.rs  test_highlight_test.rs
crates/cli/src/tests/helpers/: fixtures.rs
crates/highlight/: Cargo.toml
crates/highlight/src/: highlight.rs
crates/loader/: Cargo.toml
crates/loader/src/: loader.rs
crates/xtask/: Cargo.toml
lib/binding_web/: package-lock.json  package.json
