[workspace]
default-members = [ "crates/cli" ]
members = [
  "crates/cli",
  "crates/highlight",
  "crates/loader",
]
resolver = "2"

[workspace.package]
authors      = [ "Max Brunsfeld <maxbrunsfeld@gmail.com>", "Amaan Qureshi <amaanq12@gmail.com>" ]
categories   = [ "command-line-utilities", "parsing" ]
edition      = "2024"
homepage     = "https://tree-sitter.github.io/tree-sitter"
keywords     = [ "incremental", "parsing" ]
license      = "MIT"
repository   = "https://github.com/tree-sitter/tree-sitter"
rust-version = "1.90"
version      = "0.27.0"

[workspace.lints.clippy]
cargo     = { level = "warn", priority = -1 }
dbg_macro = "deny"
nursery   = { level = "warn", priority = -1 }
pedantic  = { level = "warn", priority = -1 }
todo      = "deny"

# The lints below are a specific subset of the pedantic+nursery lints
# that we explicitly allow in the tree-sitter codebase because they either:
#
# 1. Contain false positives,
# 2. Are unnecessary, or
# 3. Worsen the code

cast_possible_truncation = "allow"
cast_possible_wrap       = "allow"
cast_precision_loss      = "allow"
cast_sign_loss           = "allow"
if_not_else              = "allow"
items_after_statements   = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
multiple_crate_versions  = "allow"
option_if_let_else       = "allow"
similar_names            = "allow"
string_lit_as_bytes      = "allow"
struct_excessive_bools   = "allow"
too_many_lines           = "allow"

[workspace.lints.rust]
mismatched_lifetime_syntaxes = "allow"

[profile.optimize]
inherits      = "release"
codegen-units = 1         # Maximum size reduction optimizations.
lto           = true      # Link-time optimization.
opt-level     = 3         # Optimization level 3.
strip         = true      # Automatically strip symbols from the binary.

[profile.size]
inherits  = "optimize"
opt-level = "s"        # Optimize for size.

[profile.release-dev]
inherits         = "release"
codegen-units    = 256
debug            = true
debug-assertions = true
incremental      = true
lto              = false
overflow-checks  = true

[workspace.dependencies]
ansi_colours = "1.2.3"
anstyle = "1.0.14"
anyhow = "1.0.102"
bstr   = "1.12.1"
cc     = "1.2.58"
clap = { features = [
  "cargo",
  "derive",
  "env",
  "help",
  "string",
  "unstable-styles",
], version = "4.5.58" }
clap_complete = "4.5.66"
clap_complete_nushell = "4.5.10"
ctrlc     = { features = [ "termination" ], version = "3.5.2" }
etcetera = "0.11.0"
glob = "0.3.3"
indoc = "2.0.7"
libloading = "0.9.0"
log = { features = [ "std" ], version = "0.4.29" }
memchr = "2.8.0"
once_cell = "1.21.3"
pretty_assertions = "1.4.1"
regex        = "1.12.3"
schemars   = "1.2.1"
semver     = { features = [ "serde" ], version = "1.0.27" }
serde      = { features = [ "derive" ], version = "1.0.228" }
serde_json = { features = [ "preserve_order" ], version = "1.0.149" }
similar = "3.1.1"
streaming-iterator = "0.1.9"
tempfile = "3.25.0"
thiserror = "2.0.18"
unindent = "0.2.4"
walkdir = "2.5.0"
wasmparser = "0.254.0"
webbrowser = "1.1.0"

tree-sitter           = { git = "https://github.com/tree-sitter/tree-sitter.git", version = "0.27.0" }
tree-sitter-config    = { git = "https://github.com/tree-sitter/tree-sitter.git", version = "0.27.0" }
tree-sitter-generate  = { git = "https://github.com/tree-sitter/tree-sitter.git", version = "0.27.0", default-features = false }
# tree-sitter-loader    = { git = "https://github.com/tree-sitter/tree-sitter.git", version = "0.27.0" }
tree-sitter-tags      = { git = "https://github.com/tree-sitter/tree-sitter.git", version = "0.27.0" }
# tree-sitter-language  = { git = "https://github.com/tree-sitter/tree-sitter.git", version = "0.1" }

# tree-sitter           = { path = "./lib", version = "0.27.0" }
# tree-sitter-config    = { path = "./crates/config", version = "0.27.0" }
# tree-sitter-generate  = { path = "./crates/generate", version = "0.27.0", default-features = false }
tree-sitter-loader    = { path = "./crates/loader", version = "0.27.0" }
# tree-sitter-tags      = { path = "./crates/tags", version = "0.27.0" }
# tree-sitter-language  = { path = "./crates/language", version = "0.1" }
tree-sitter-highlight-extended = { path = "./crates/highlight", version = "0.27.0" }
